--- a/assinaturas/templates/login.html
+++ b/assinaturas/templates/login.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block content %}
   <div class="container">
@@ -7,12 +8,12 @@
         <form method="post">
           {% csrf_token %}
           <div class="mb-3">
-            <label  class="form-label">Usuário</label>
-            <input  class="form-control" />
+            <label for="id_username" class="form-label">Usuário</label>
+            <input type="text" class="form-control" id="id_username" name="username" />
           </div>
           <div class="mb-3">
-            <label for="exampleInputPassword1" class="form-label">Senha</label>
-            <input type="password" class="form-control" id="exampleInputPassword1" />
+            <label for="id_password" class="form-label">Senha</label>
+            <input type="password" class="form-control" id="id_password" name="password" />
           </div>
           <button type="submit" class="btn btn-primary">Enviar</button>
         </form>
