--- a/assinaturas/templates/accounts/login.html
+++ b/assinaturas/templates/accounts/login.html
@@ -2,9 +2,12 @@
 {% load static %}
 
 {% block content %}
-  <div class="container">
-    <div class="row justify-content-center align-items-center" style="height: 100vh;">
+  <div class="container my-5">
+    <div class="row justify-content-center align-items-center">
       <div class="col-4">
+        <div class="d-flex justify-content-center">
+          <h4>Login</h4>
+        </div>
         <form method="post">
           {% csrf_token %}
           <div class="mb-3">
@@ -16,6 +19,9 @@
             <input type="password" class="form-control" id="id_password" name="password" />
           </div>
           <button type="submit" class="btn btn-primary">Enviar</button>
+          <div class="my-3">
+          {{error}}
+          </div>
         </form>
       </div>
     </div>
