--- a/assinaturas/templates/base.html
+++ b/assinaturas/templates/base.html
@@ -7,6 +7,53 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container">
+        <a class="navbar-brand" href="#">Autenticador</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            {% if user.is_authenticated %}
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'new_document' %}">Criar documento</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Seus documentos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Validar documento</a>
+              </li>
+            {% else %}
+              <li class="nav-item">
+                <a class="nav-link" href="#">Validar documento</a>
+              </li>
+            {% endif %}
+          </ul>
+          <ul class="navbar-nav d-flex">
+            <li class="nav-item dropdown justify-content-end">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Opções</a>
+              <ul class="dropdown-menu">
+                {% if user.is_authenticated %}
+                  <li>
+                    <a class="dropdown-item" href="{% url 'generate_keys' %}">Gerar chaves</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
+                  </li>
+                {% else %}
+                  <li>
+                    <a class="dropdown-item" href="{% url 'login' %}">Entrar</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="{% url 'register' %}">Cadastrar</a>
+                  </li>
+                {% endif %}
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     {% block content %}
 
     {% endblock %}
