feat: adiciona lista de documentos assinados e ver mais do documento assinado

--- a/assinaturas/templates/base.html
+++ b/assinaturas/templates/base.html
@@ -18,7 +18,7 @@
                 <a class="nav-link" href="{% url 'new_document' %}">Criar documento</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Seus documentos</a>
+                <a class="nav-link" href="{% url 'signature_list' %}">Seus documentos</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Validar documento</a>
