--- a/assinaturas/templates/lista_assinados.html
+++ b/assinaturas/templates/lista_assinados.html
@@ -8,7 +8,7 @@
       <ul class="list-group">
         {% for document in documents %}
           <li class="list-group-item">
-            <a href="/documentos/{{ document.id }}/view">{{ document.texto }}</a>
+            <a href="/documents/{{ document.id }}/view">{{ document.texto }}</a>
           </li>
         {% endfor %}
       </ul>
