--- a/assinaturas/templates/visualizar_documento.html
+++ b/assinaturas/templates/visualizar_documento.html
@@ -14,6 +14,7 @@
           <p class="card-text"><Strong>Usuário: </Strong>{{ documento.user }}</p>
           <p class="card-text"><Strong>Data: </Strong>{{ documento.assinado.data }}</p>
           <p class="card-text"><Strong>Assinatura: </Strong>{{ documento.assinado.assinatura }}</p>
+          <p class="card-text"><Strong>Hash: </Strong>{{ documento.assinado.hash }}</p>
         </div>
       </div>
 </div>
